knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__NoteSection__c/fields/pqcrush__Account_Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Account_Plan_Template__c</fullName>
    <label>Account Plan Template</label>
    <referenceTo>pqcrush__Account_Plan_Template__c</referenceTo>
    <relationshipLabel>NoteSections</relationshipLabel>
    <relationshipName>NoteSections</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>