knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__NoteSection__c/fields/pqcrush__Rich_Text_Area__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Rich_Text_Area__c</fullName>
    <label>Rich Text Area</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>